<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.sundram.androidanimation.MainActivity" />

        <variable
            name="view"
            type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fade_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->handlers.OnFadeInBtnClick(view)}"
                android:text="@string/fade_in"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/fade_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/fade_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fade_in_btn"
                app:layout_constraintTop_toTopOf="@id/fade_in_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fade_out_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnFadeOutBtnClick(view)}"
                android:text="@string/fade_out"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fade_in_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/fade_out_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/fade_out"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fade_out_btn"
                app:layout_constraintTop_toTopOf="@id/fade_out_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/blinking_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnBlinkingBtnClick(view)}"
                android:text="@string/blinking"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fade_out_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/blinking_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/blinking"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/blinking_btn"
                app:layout_constraintTop_toTopOf="@id/blinking_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zoom_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnZoomInBtnClick(view)}"
                android:text="@string/zoom_in"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blinking_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/zoom_in_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/zoom_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/zoom_in_btn"
                app:layout_constraintTop_toTopOf="@id/zoom_in_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zoom_out_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnZoomOutBtnClick(view)}"
                android:text="@string/zoom_out"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zoom_in_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/zoom_out_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/zoom_out"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/zoom_out_btn"
                app:layout_constraintTop_toTopOf="@id/zoom_out_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rotate_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnRotateBtnClick(view)}"
                android:text="@string/rotate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zoom_out_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/rotate_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/rotate"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rotate_btn"
                app:layout_constraintTop_toTopOf="@id/rotate_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/move_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnMoveBtnClick(view)}"
                android:text="@string/move"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rotate_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/move_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/move"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/move_btn"
                app:layout_constraintTop_toTopOf="@id/move_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/slide_up_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnSlideUpBtnClick(view)}"
                android:text="@string/slide_up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/move_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/slide_up_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/slide_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/slide_up_btn"
                app:layout_constraintTop_toTopOf="@id/slide_up_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/slide_down_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnSlideDownBtnClick(view)}"
                android:text="@string/slide_down"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slide_up_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/slide_down_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/slide_down"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/slide_down_btn"
                app:layout_constraintTop_toTopOf="@id/slide_down_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bounce_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnBounceBtnClick(view)}"
                android:text="@string/bounce"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slide_down_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/bounce_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/bounce"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bounce_btn"
                app:layout_constraintTop_toTopOf="@id/bounce_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sequential_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view)->handlers.OnSequentialBtnClick(view)}"
                android:text="@string/sequential"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bounce_btn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/sequential_animation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sequential"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sequential_btn"
                app:layout_constraintTop_toTopOf="@id/sequential_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>